--- a/Programa_Bioquim/Programa_Bioquim/Programa_Bioquim.csproj
+++ b/Programa_Bioquim/Programa_Bioquim/Programa_Bioquim.csproj
@@ -62,6 +62,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Formularios\Admin\frmGestionUsuarios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularios\Admin\frmGestionUsuarios.Designer.cs">
+      <DependentUpon>frmGestionUsuarios.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Formularios\Admin\PaddedLabel.cs" />
     <Compile Include="Formularios\Empleado\frmInvetario.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -112,6 +119,9 @@
     <Compile Include="userControl\frmRegistrarUsuario.Designer.cs">
       <DependentUpon>frmRegistrarUsuario.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Formularios\Admin\frmGestionUsuarios.resx">
+      <DependentUpon>frmGestionUsuarios.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Formularios\Empleado\frmInicioEmpleado.resx">
       <DependentUpon>frmInicioEmpleado.cs</DependentUpon>
     </EmbeddedResource>
@@ -176,7 +186,6 @@
     <None Include="Resources\LogoSimple.png" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Formularios\Admin\" />
     <Folder Include="Formularios\Repartidor\" />
   </ItemGroup>
   <ItemGroup>
