--- a/Programa_Bioquim/Programa_Bioquim/Programa_Bioquim.csproj
+++ b/Programa_Bioquim/Programa_Bioquim/Programa_Bioquim.csproj
@@ -62,6 +62,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Formularios\Admin\frmGestionDeUsuarios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularios\Admin\frmGestionDeUsuarios.Designer.cs">
+      <DependentUpon>frmGestionDeUsuarios.cs</DependentUpon>
+    </Compile>
     <Compile Include="Formularios\Admin\frmGestionUsuarios.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -125,6 +131,9 @@
     <Compile Include="userControl\frmRegistrarUsuario.Designer.cs">
       <DependentUpon>frmRegistrarUsuario.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Formularios\Admin\frmGestionDeUsuarios.resx">
+      <DependentUpon>frmGestionDeUsuarios.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Formularios\Admin\frmGestionUsuarios.resx">
       <DependentUpon>frmGestionUsuarios.cs</DependentUpon>
     </EmbeddedResource>
