--- a/Programa_Bioquim/Programa_Bioquim/Programa_Bioquim.csproj
+++ b/Programa_Bioquim/Programa_Bioquim/Programa_Bioquim.csproj
@@ -62,6 +62,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Formularios\Admin\frmDashBoardAdmin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularios\Admin\frmDashBoardAdmin.Designer.cs">
+      <DependentUpon>frmDashBoardAdmin.cs</DependentUpon>
+    </Compile>
     <Compile Include="Formularios\Admin\frmGestionDeUsuarios.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -74,12 +80,30 @@
     <Compile Include="Formularios\Admin\frmGestionUsuarios.Designer.cs">
       <DependentUpon>frmGestionUsuarios.cs</DependentUpon>
     </Compile>
-    <Compile Include="Formularios\Admin\PaddedLabel.cs" />
-    <Compile Include="Formularios\Empleado\frmInvetario.cs">
+    <Compile Include="Formularios\Admin\frmInicioAdmin.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Formularios\Empleado\frmInvetario.Designer.cs">
-      <DependentUpon>frmInvetario.cs</DependentUpon>
+    <Compile Include="Formularios\Admin\frmInicioAdmin.Designer.cs">
+      <DependentUpon>frmInicioAdmin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Formularios\Admin\frmInvetarioAdmin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularios\Admin\frmInvetarioAdmin.Designer.cs">
+      <DependentUpon>frmInvetarioAdmin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Formularios\Admin\frmRutasDeEntregaAdmin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularios\Admin\frmRutasDeEntregaAdmin.Designer.cs">
+      <DependentUpon>frmRutasDeEntregaAdmin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Formularios\Admin\PaddedLabel.cs" />
+    <Compile Include="Formularios\Empleado\frmInvetarioEmpleado.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularios\Empleado\frmInvetarioEmpleado.Designer.cs">
+      <DependentUpon>frmInvetarioEmpleado.cs</DependentUpon>
     </Compile>
     <Compile Include="Formularios\Empleado\frmRutasDeEntrega.cs">
       <SubType>Form</SubType>
@@ -117,6 +141,24 @@
     <Compile Include="Formularios\frmContenedorRegistrarUsuario.Designer.cs">
       <DependentUpon>frmContenedorRegistrarUsuario.cs</DependentUpon>
     </Compile>
+    <Compile Include="Formularios\Repartidor\frmDashBoardRepartidor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularios\Repartidor\frmDashBoardRepartidor.Designer.cs">
+      <DependentUpon>frmDashBoardRepartidor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Formularios\Repartidor\frmInicioRepartidor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularios\Repartidor\frmInicioRepartidor.Designer.cs">
+      <DependentUpon>frmInicioRepartidor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Formularios\Repartidor\frmRutasDeEntrega.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularios\Repartidor\frmRutasDeEntrega.Designer.cs">
+      <DependentUpon>frmRutasDeEntrega.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="userControl\frmLogin.cs">
@@ -131,17 +173,29 @@
     <Compile Include="userControl\frmRegistrarUsuario.Designer.cs">
       <DependentUpon>frmRegistrarUsuario.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Formularios\Admin\frmDashBoardAdmin.resx">
+      <DependentUpon>frmDashBoardAdmin.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Formularios\Admin\frmGestionDeUsuarios.resx">
       <DependentUpon>frmGestionDeUsuarios.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Formularios\Admin\frmGestionUsuarios.resx">
       <DependentUpon>frmGestionUsuarios.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Formularios\Admin\frmInicioAdmin.resx">
+      <DependentUpon>frmInicioAdmin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Formularios\Admin\frmInvetarioAdmin.resx">
+      <DependentUpon>frmInvetarioAdmin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Formularios\Admin\frmRutasDeEntregaAdmin.resx">
+      <DependentUpon>frmRutasDeEntregaAdmin.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Formularios\Empleado\frmInicioEmpleado.resx">
       <DependentUpon>frmInicioEmpleado.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Formularios\Empleado\frmInvetario.resx">
-      <DependentUpon>frmInvetario.cs</DependentUpon>
+    <EmbeddedResource Include="Formularios\Empleado\frmInvetarioEmpleado.resx">
+      <DependentUpon>frmInvetarioEmpleado.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Formularios\Empleado\frmRutasDeEntrega.resx">
       <DependentUpon>frmRutasDeEntrega.cs</DependentUpon>
@@ -157,6 +211,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Formularios\frmContenedorRegistrarUsuario.resx">
       <DependentUpon>frmContenedorRegistrarUsuario.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Formularios\Repartidor\frmDashBoardRepartidor.resx">
+      <DependentUpon>frmDashBoardRepartidor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Formularios\Repartidor\frmInicioRepartidor.resx">
+      <DependentUpon>frmInicioRepartidor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Formularios\Repartidor\frmRutasDeEntrega.resx">
+      <DependentUpon>frmRutasDeEntrega.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -203,9 +266,7 @@
   <ItemGroup>
     <None Include="Resources\LogoSimple.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Formularios\Repartidor\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="Resources\x.png" />
   </ItemGroup>
